--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "vue-select": "^2.6.4",
     "vue-svgicon": "^3.2.6",
     "vuex": "^3.1.1",
-    "vuex-oidc": "git+https://github.com/bimdata/vuex-oidc.git#5490a39549467b8efe20ec961776b648effa8a33"
+    "vuex-oidc": "git+https://git@github.com/bimdata/vuex-oidc.git#5490a39549467b8efe20ec961776b648effa8a33"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
