--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@bimdata/utils": "0.2.3",
     "@bimdata/viewer": "^1.6.1",
     "axios": "^0.21.1",
-    "bootstrap-vue": "^2.0.0-rc.28",
+    "bootstrap-vue": "2.0.0-rc.28",
     "isemail": "^3.2.0",
     "mapbox-gl": "^0.53.1",
     "moment": "^2.24.0",
