update viewer while circle is down

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@bimdata/realiz3d-viewer-plugin": "0.0.2",
     "@bimdata/svg-extractor-viewer-plugin": "1.0.1",
     "@bimdata/utils": "0.2.3",
-    "@bimdata/viewer": "^1.6.1",
+    "@bimdata/viewer": "^1.7.0-rc.1",
     "axios": "^0.21.1",
     "bootstrap-vue": "2.0.0-rc.28",
     "isemail": "^3.2.0",
