--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 name: Platform
 
-on: push
-
 on: 
   push:
   repository_dispatch:
@@ -43,6 +41,8 @@ jobs:
       , github.ref)
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
       - name: Login to BIMData Docker Registry
         uses: docker/login-action@v1
         with:
